# ysa_telescope

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
launch/: simulation.launch  ysa_telescope.launch
mesh/: scope_arms_printable.STL
model/: BrandonAdams (1).SLDPRT  Scope_cap.SLDPRT  Scope_cap_second_attempt.SLDPRT  Scope_cap_third_attempt.SLDPRT  ToolboxStandards.xml  cage.stl  cage1.inf.1  cage2.STL  cage3.dwg  cage3.prt.1  cage3__out.log.1  casing.dwg  config.pro  first_assembly.SLDASM  intf_config.cdb  no_bottom.SLDPRT  no_bottom_first_print.STL  scope_arms.SLDPRT  secondgo.dwg  separate.prt.1  separate.prt.2  std.err  std.out  telescopecage.prt  telescopecage.prt.5  telescopecage.prt.6  telescopecage.stp  trail.txt.1  trail.txt.2  trail.txt.3  trail.txt.4  trail.txt.5  trail.txt.6
src/: comp-filter.py  imu.ino  mpu_reader.cpp  servo-controller.py  simulation.py  spi_mpu9255_reader.cpp
src/Arduino/imu/: imu.ino
src/old/i2c/: i2c_mpu9255_reader.cpp
src/old/python/: i2c-mpu9255-reader.py  mpu9255-data-converter.py
urdf/: model.urdf.xacro
